--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "npm run build --prefix frontend",
     "start": "npx start-server -s ./frontend/build",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "npm ci --prefix frontend"
+    "postinstall": "cd frontend && npm ci"
   },
   "repository": {
     "type": "git",
